# NotifyHub

./: .env  Dockerfile  README.md  docker-compose.yml  init_script.sh  postman_collection.json  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  logging.py
app/db/: mongo.py
app/repositories/: notification_repository.py
app/schemas/: notifications.py
app/services/: notification_service.py  provider_client.py
app/utils/: __init__.py
app/workers/: delivery_worker.py
scripts/: seed_data.py
