[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notifyhub"
version = "0.1.0"
description = "NotifyHub (FastAPI + Motor/Mongo) notification service"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "NotifyHub" }]
dependencies = [
  "fastapi>=0.115.8,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.8.0,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "motor>=3.5,<4.0",
  "pymongo>=4.9,<5.0",
  "pymemcache>=4.0,<5.0",
  "httpx>=0.26,<1.0",
  "gunicorn>=21.2,<23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
